# optimist-router

./: .gitignore  Cargo.toml  README.md
experiments/2405.12207/configs/: collect_stats.yaml  main_results_gmm.yaml  main_results_spherical_kmeans.yaml  main_results_standard_kmeans.yaml  prediction_error.yaml  savings.yaml  sweep_delta.yaml  sweep_rank.yaml
experiments/2405.12207/logs/: collect_stats.logs  main_results_gmm.logs  main_results_spherical_kmeans.logs  main_results_standard_kmeans.logs  prediction_error.logs  savings.logs  sweep_delta.logs  sweep_rank.logs
src/: lib.rs
src/experiment/: config.rs  executor.rs  mod.rs
src/index/: ivf_index.rs  mod.rs
