[package]
name = "optimist-router"
version = "0.1.0"
edition = "2021"

[dependencies]
thousands = "0.2.0"
flate2 = "1.0.23"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
rand = "0.8.5"
rayon = "1.5.3"
linfa-linalg = "0.1.0"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
bincode = "1.3.3"
typetag = "0.2.8"
statrs = "0.16.0"
colored = "2.0.4"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
ann_dataset = "0.1.3"
anyhow = "1.0.82"
